crates/burn-cube/tests/error/if_else_if.rs
use burn_cube::prelude::*;

#[cube]
fn range(x: UInt, y: UInt) {
    if x == y {
    } else if x != y {
    }
}

fn main() {}
