crates/burn-cube/tests/error/if_else_if.stderr
error: Unsupported: only `else` block is allowed after an `if` statement.
 --> tests/error/if_else_if.rs:6:12
  |
6 |       } else if x != y {
  |  ____________^
7 | |     }
  | |_____^
